# mandelbrot_set

./: CMakeLists.txt  README.md
include/: shader.hpp
include/glad/: glad.h
shaders/: shader.frag
src/: glad.c  main.cpp  shader.cpp
